# segmentor

./: .gitignore  Dockerfile  Predicter.token.temp.db  Test.ipynb  Training.ipynb  Untitled1.ipynb  access.cfg.db  app.py  bergen.yaml  call_blur.py  docker-compose.yaml  logs.txt  port.yaml  predicter.py  pyproject.toml  stardist.fakts.yaml  stardist.token.temp.db  test.py  token.db.db
.arkitekt/: builds.yaml  deployments.yaml  manifest.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
florian/: 2_training.ipynb  3_prediction.ipynb  PRedict.ipynb  access.cfg.db  labels-2d.py
florian/models/stardist/: thresholds.json
models/stardist/: config.json
models/stardist/logs/images/: events.out.tfevents.1613406343.326c68b34ef2.24404.742.v2  events.out.tfevents.1613467508.326c68b34ef2.196012.742.v2
models/stardist/logs/train/: events.out.tfevents.1613406344.326c68b34ef2.24404.787.v2  events.out.tfevents.1613467508.326c68b34ef2.196012.787.v2
models/stardist/logs/validation/: events.out.tfevents.1613406367.326c68b34ef2.24404.3758.v2  events.out.tfevents.1613467532.326c68b34ef2.196012.3758.v2
models/stardist2/logs/validation/: events.out.tfevents.1611680380.P-TSIBA-FLEVET.5668.5140.v2
models/stardist3/: config.json  thresholds.json
models/stardist3/logs/images/: events.out.tfevents.1622450728.P-TSIBA-FLEVET.24004.1022.v2
models/stardist3/logs/train/: events.out.tfevents.1622450763.P-TSIBA-FLEVET.24004.5076.v2
models/stardist_styled/: config.json  thresholds.json
segmentor/: main.py
(+6 files in other folders)
